--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
-    "name": "comfyte-personal-site",
-    "version": "5.0.0",
-    "private": true,
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/comfyte/site.git"
-    },
-    "author": "Farrel R",
-    "homepage": "https://farrel.dev",
-    "devDependencies": {
-        "@11ty/eleventy": "^1.0.0",
-        "@11ty/eleventy-plugin-vue": "^0.7.2"
-    }
+  "name": "dummy-site-two",
+  "version": "1.0.0",
+  "private": true,
+  "description": "dummy-site-two",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@mdx-js/react": "^2.3.0",
+    "gatsby": "^5.7.0",
+    "gatsby-plugin-mdx": "^5.7.0",
+    "gatsby-source-filesystem": "^5.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^4.9.5"
+  }
 }
